# rustfits-web

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  tailwind.config.js
.github/workflows/: github-pg  pr_check.yml
src/: app.rs  main.rs  navbar.rs
src/components/: FITSView.rs  TableView.rs  mod.rs  tables.rs
src/components/Graphs/: LineGraph.rs  mod.rs
src/components/Views/: FITSView.rs  mod.rs
src/components/graphs/: image_graph.rs  mod.rs
src/components/views/: fits_view.rs  mod.rs  table_view.rs
