[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
rustfits = { path = "../rustfits" }
gloo = "0.11.0"
base64 = "0.21.7"
js-sys = "0.3.67"


[dependencies.web-sys]
version = "0.3.67"
features = ["File", "DragEvent", "DataTransfer"]