[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
gloo = "0.11.0"
base64 = "0.21.7"
js-sys = "0.3.67"
wasm-logger = "0.2.0"
log = "0.4.20"
rustfits = {path = "../rustfits"}
plotters = "0.3.5"
plotters-canvas = "0.3.0"


[dependencies.web-sys]
version = "0.3.67"
features = ["File", "DragEvent", "DataTransfer", "HtmlCanvasElement"]
